--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Plugins pour nagios.
 
-check_bandwidth.pl : 
+check_traffic.pl : 
 Permet de tester le traffic du port d'un switch, entrant et sortant.
 Génére les données de performance permettant de tracer un graphique.
 
@@ -13,7 +13,7 @@ HELP :
 # Ce plugin n'est livrée avec ABSOLUMENT AUCUNE GARANTIE.
 #===============================================================================
 
-Usage : check_bandwidth.pl [-H <host>] [-C <community>] [-i <interface name>] [-w <warning>] [-c <critical>]
+Usage : check_traffic.pl [-H <host>] [-C <community>] [-i <interface name>] [-w <warning>] [-c <critical>]
 
  -?, --usage
    Print usage information
