--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 Plugins pour nagios.
 
-check_traffic.pl : 
+<h1>check_traffic.pl</h1>
 Permet de tester le traffic du port d'un switch, entrant et sortant.
 Génére les données de performance permettant de tracer un graphique.
 
-HELP :
+</h2>Help command</h2>
 #===============================================================================
 # Auteur : Simon Mignot - simon.mignot.lasalle@gmail.com
 # But    : Verification de la bande passante du port d'un switch
